feat:  Channel chat now supports uploading and downloading files.
